# coreutils

cpp-src/: CMakeLists.txt
cpp-src/docs/: implementation_plan.md  task_true_utility.md
cpp-src/src/: CMakeLists.txt  true.cpp
cpp-src/tests/: CMakeLists.txt  true_test.cpp
